Bug 162656 - Alt+X (.uno:UnicodeNotationToggle) deletes all characters like holding down the Backspace key
Summary: Alt+X (.uno:UnicodeNotationToggle) deletes all characters like holding down t...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.2
Keywords:
Depends on:
Blocks:
 
Reported: 2024-08-28 02:08 UTC by Takenori Yasuda
Modified: 2025-06-10 18:07 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Takenori Yasuda 2024-08-28 02:08:42 UTC
Description:
Holding down Alt+X for a kanji character with a variation selector executes .uno:UnicodeNotationToggle repeatedly.

However, a character previous to the target kanji character and the variation selector is also converted together, so all characters previous to the target are deleted like holding down the Backspace key.

Steps to Reproduce:
1.Insert a kanji character with a variation selector anywhere, for example "邉󠄁 (U+9089 U+E0101)".
2.Hold down Alt+X, wait a bit.

Actual Results:
All the characters previous to the variation selector (U+E0101) are deleted.

Expected Results:
Only the target will convert repeatedly.
邉󠄁 -> U+9089U+E0101 -> 邉󠄁 -> U+9089U+E0101 -> 邉󠄁 -> U+9089U+E0101 ... or
邉󠄁 -> 邉U+E0101 -> 邉󠄁 -> 邉U+E0101 -> 邉󠄁 -> 邉U+E0101 ...


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 24.8.0.3 (X86_64) / LibreOffice Community
Build ID: 0bdf1299c94fe897b119f97f3c613e9dca6be583
CPU threads: 8; OS: Windows 11 X86_64 (10.0 build 22621); UI render: Skia/Raster; VCL: win
Locale: ja-JP (ja_JP); UI: ja-JP
Calc: CL threaded Jumbo
Comment 1 Mike Kaganski 2024-08-28 13:15:07 UTC
https://gerrit.libreoffice.org/c/core/+/172532
Comment 2 Commit Notification 2024-08-28 18:52:16 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5f1579c6fe56960f529e96f629d9a37352752345

tdf#162656: make sure to replace correct range

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-09-02 07:37:27 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/00ae2560e32d4a2f40a4580a602d495450465d8f

tdf#162656: make sure to replace correct range

It will be available in 24.8.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.