tdf#162656: make sure to replace correct range

ToggleUnicodeCodepoint::CharsToDelete returns number of codepoints,
while SwWrtShell::DelLeft operates glyphs, which may consist of a
number of combining codepoints.

Change-Id: I394ee76c576f2e6f921cb30d125cce2f83559608
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172532
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/172548